--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,8 +1,14 @@
 Verificarlo CHANGELOG
 
-# [master] unreleased
+# [v1.0.0] 2023/08/30
+
+## Added
   * Added support for Aarch64 (arm64) architectures
-  * verificarlo accepts LLVM byte-code as input and can produce byte-code as output
+  * Verificarlo accepts LLVM byte-code as input and can produce byte-code as output
+  * Interoperability with POCL
+
+## Fixed
+  * Fix binary64 precision checks in vprec backend
 
 # [v0.9.1] 2022/10/21
 
